--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Recipes</title>
 </head>
 <body>
- <h1>Recipes!/h1>
+ <h1>Recipes!!/h1>
 
  <p><a href ="recipes/cheesecake.html">Cheesecake</a><p>
 </p><a href = "recipes/corndog.html">Corndog</a></p>
