--- a/recipes/corndog.html
+++ b/recipes/corndog.html
@@ -8,5 +8,37 @@
 </head>
 <body>
   <h1>Corndog</h1>
+  <img src="/home/repos/odin-recipes/pictures/CornDog.jpg">
+  <h2>Bring the fair home</h2>
+    <p>A corn dog is a sausage on a stick that has been coated in a thick layer of cornmeal batter and deep fried. It originated in the United States and is commonly found in American cuisine.</p>
+
+    <h3>Ingredients</h3>
+      <ul>
+        <li>Hot Dogs – We highly recommend using simple hot dogs – either beef, chicken or turkey hot dogs will do. If using longer-sized hot dogs, keep in mind they will need to fit the diameter of your pot to fry once your stick is on. Also, very thick hot dogs won’t heat through as well.</li>
+        <li>Corn Meal – get “finely ground”</li>
+        <li>Flour, sugar, baking powder, and salt – pantry basics that help form the batter and make it fluffy.</li>
+        <li>Buttermilk and oil – adds flavor and moisture to the batter</li>
+        <li>Egg – helps batter hold together.</li>
+        <li>Honey – adds sweetness to create a honey batter</li>
+        </ul>
+
+        <h3>Directions</h3>
+        <ol>
+          <li>Pat Dry Hot Dogs with paper towels to help the batter to stick better.</li>
+
+          <li>Insert Sticks-skewer hot dogs make sure the length fits your pot)</li>
+          <li>Dry Ingredients – Combine Batter – pour wet ingredients into dry ingredients and whisk until blended.whisk together cornmeal, flour, sugar, baking powder, and salt.</li>
+
+          <li>Wet Ingredients – whisk together buttermilk, egg, olive oil, and honey.</li>
+
+          <li>Combine Batter – pour wet ingredients into dry ingredients and whisk until blended.</li>
+
+          <li>Dip Hot Dogs and Fry – Batter the corn dogs to completely cover the hot dog, let excess drip off at the edge then Fry 2-3 at a time at 350˚F for 3 minutes until golden brown.</li>
+        </ol>
+
+
+
+
+      </ul>
 </body>
 </html>
