--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -8,5 +8,40 @@
 </head>
 <body>
   <h1>Meatloaf</h1>
+  <img = src="/home/repos/odin-recipes/pictures/meatloaf.jpeg">
+  <h3>Great American Dish</h3>
+  <p>Meatloaf is a dish of ground meat that has been combined with other ingredients and formed into the shape of a loaf, then baked or smoked. The final shape is either hand-formed on a baking tray, or pan-formed by cooking it in a loaf pan.</p>
+
+  <h3>Ingredients</h3>
+    <ul>
+      <li>1-1/2 pounds Ground Beef (93% lean or leaner)</li>
+      <li>3/4 cup panko bread crumbs</li>
+      <li>3/4 cup ketchup, divided</li>
+      <li>1/2 cup minced onion</li>
+      <li>1 egg</li>
+      <li>1 tablespoon Worcestershire sauce</li>
+      <li>2 teaspoons minced garlic
+      <li>1 teaspoon dried thyme teaspoon dried thyme</li>
+      <li>3/4 teaspoon pepper</li>
+      <li>1/2 teaspoon salt</li>
+
+      </li>
+      </ul>
+
+  <h3>Directions</h3>
+
+    <ol>
+      <li>Preheat oven to 350°F. Combine Ground Beef, bread crumbs, 1/2 cup ketchup, onion, egg, Worcestershire, garlic, thyme, pepper and salt in large bowl, mixing lightly but thoroughly. Shape beef into 8 x 4-inch loaf on rack in aluminum foil-lined broiler pan.</li>
+
+      <li>Place on upper oven rack in 350°F oven. Bake 45 to 55 minutes, until instant-read thermometer inserted into center registers 160°F; brush with remaining 1/4 cup ketchup during last 10 minutes, if desired. Let stand 10 minutes. Cut into slices.</li>
+
+
+    </ol>
+
+
+
+
+
+    </ul>
 </body>
 </html>
