--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -8,5 +8,48 @@
 </head>
 <body>
   <h1>Cheesecake</h1>
+  <img src = "/home/repos/odin-recipes/pictures/cheesecake.jpeg">
+
+  <h3> Your favorite desert</h3>
+  <p>Cheesecake is a sweet dessert consisting of one or more layers. The main, and thickest, layer consists of a mixture of a soft, fresh cheese, eggs, and sugar. If there is a bottom layer, it most often consists of a crust or base made from crushed cookies, graham crackers, pastry, or sometimes sponge cake.</p>
+
+  <h2>Ingredients</h2>
+  <br>
+  <h3> For the crust</h3>
+    <ul>
+      <li>1 3/4 cups (230g) Graham cracker crumbs (from about 15 Graham crackers)</li>
+      <li>2 tablespoons sugar</li>
+      <li>Pinch salt</li>
+      <li>4 tablespoons plus 1 teaspoon (60g) unsalted butter (if using salted butter, omit the pinch of salt), melted</li>
+    </ul>
+  <h3>For the Filling</h3> 
+  <ul>
+      <li>2 pounds (900g) cream cheese, at room temperature</li>
+      <li>1 1/3 cups (270g) sugar</li>
+      <li>Pinch salt</li>
+      <li>2 teaspoons vanilla extract</li>
+      <li>4 large eggs, at room temperature</li>
+      <li>2/3 cup (160ml) sour cream, at room temperature</li>
+      <li>2/3 cup (160ml) heavy cream</li>
+    </ul>
+
+    <h3>Directions</h3>
+      <ol>
+        <li>Preheat the oven to 350°F.
+          Arrange a rack in the lower third of the oven and preheat to 350°F (175°C).</li>
+          <li>Process the crust ingredients:
+            Pulse the graham crackers in a food processor or blender until finely ground. Put in a large bowl, and stir in the sugar and salt. Stir in the melted butter.</li>
+            <li>Press into a springform pan:
+              Use a 9x2 3/4-inch round springform pan. Gently press down on the crumbs using your fingers, until the crumbs are a nice even layer at the bottom of the pan, with maybe just a slight rise along the inside edges of the pan.</li>
+              <li>Bake:
+                Place the pan on a baking sheet and bake at 350°F (175°C) for 10 minutes. Remove from the oven and let cool.</li>
+                <li>Lower the oven temperature to 325°F (160°C).
+
+                  While the crust is cooling, you can skip ahead and start on the filling. Wait until the crust has cooled to wrap the pan in foil in the next step.</li>
+
+
+
+      </ol>
+
 </body>
 </html>
