adding return to main page link  and <main> element

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Recipes</title>
 </head>
 <body>
+<main>
  <h1>Recipes</h1>
 
  <p><a href ="recipes/cheesecake.html">Cheesecake</a><p>
@@ -14,4 +15,5 @@
 </p><a href="recipes/lasagna.html">Lasagna</a></p>
 </p><a href ="recipes/meatloaf.html">Meatloaf</a></p>
 </body>
+</main>
 </html>
