--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -7,8 +7,9 @@
   <title>Cheesecake</title>
 </head>
 <body>
+  <main>
   <h1>Cheesecake</h1>
-  <img src = "/home/repos/odin-recipes/pictures/cheesecake.jpeg">
+  <img src = "../pictures/cheesecake.jpeg">
 
   <h3> Your favorite desert</h3>
   <p>Cheesecake is a sweet dessert consisting of one or more layers. The main, and thickest, layer consists of a mixture of a soft, fresh cheese, eggs, and sugar. If there is a bottom layer, it most often consists of a crust or base made from crushed cookies, graham crackers, pastry, or sometimes sponge cake.</p>
@@ -45,11 +46,16 @@
                 Place the pan on a baking sheet and bake at 350°F (175°C) for 10 minutes. Remove from the oven and let cool.</li>
                 <li>Lower the oven temperature to 325°F (160°C).
 
-                  While the crust is cooling, you can skip ahead and start on the filling. Wait until the crust has cooled to wrap the pan in foil in the next step.</li>
+                  While the crust is cooling, you can skip ahead and start on the filling. Wait until the crust has cooled to wrap the pan infoil in the next step.</li>
 
 
-
+                  
       </ol>
+      
+
+  <p></p>
+  <a = href="../index.html">Return to main page</a>
+</main>
 
 </body>
 </html>
