--- a/recipes/corndog.html
+++ b/recipes/corndog.html
@@ -7,8 +7,9 @@
   <title>Corndog</title>
 </head>
 <body>
+  <main>
   <h1>Corndog</h1>
-  <img src="/home/repos/odin-recipes/pictures/CornDog.jpg">
+  <img src="../pictures/CornDog.jpg" alt="corndog" height="200" width="300">
   <h2>Bring the fair home</h2>
     <p>A corn dog is a sausage on a stick that has been coated in a thick layer of cornmeal batter and deep fried. It originated in the United States and is commonly found in American cuisine.</p>
 
@@ -37,8 +38,11 @@
         </ol>
 
 
+       
+        <p></p>
+        <a = href="../index.html">Return to main page</a>
 
 
-      </ul>
+      </main>
 </body>
 </html>
