--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,8 +7,9 @@
   <title>Lasagna</title>
 </head>
 <body>
+  <main>
 <h1>Lasagna</h1>
-<img src="/home/repos/odin-recipes/pictures/lasagna.jpeg">
+<img src="../pictures/lasagna.jpeg">
 <h3> Be like Garfield</h3>
 <p>Lasagne are a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagne alternating with fillings</p>
 <br><br>
@@ -34,12 +35,12 @@
   </ol>
 
 
+  <p></p>
+  <a = href="../index.html">Return to main page</a>
+
+</main>
 
 
-
-
-
-</ul>
 
 
 
