--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -7,8 +7,9 @@
   <title>Meatloaf</title>
 </head>
 <body>
+  <main>
   <h1>Meatloaf</h1>
-  <img = src="/home/repos/odin-recipes/pictures/meatloaf.jpeg">
+  <img = src="../pictures/meatloaf.jpeg">
   <h3>Great American Dish</h3>
   <p>Meatloaf is a dish of ground meat that has been combined with other ingredients and formed into the shape of a loaf, then baked or smoked. The final shape is either hand-formed on a baking tray, or pan-formed by cooking it in a loaf pan.</p>
 
@@ -39,9 +40,12 @@
     </ol>
 
 
+   
+    <p></p>
+    <a = href="../index.html">Return to main page</a>
 
 
-
-    </ul>
+  </main>
+    
 </body>
 </html>
