added picture to index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <main>
+  <img src="pictures/foodwars.jpeg" alt="Food wars picture" height="500" width="600">
  <h1>Recipes</h1>
 
  <p><a href ="recipes/cheesecake.html">Cheesecake</a><p>
