removed br tags

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,8 +11,8 @@
 <h1>Lasagna</h1>
 <img src="../pictures/lasagna.jpeg">
 <h3> Be like Garfield</h3>
-<p>Lasagne are a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagne alternating with fillings</p>
-<br><br>
+<p>Lasagna are a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagne alternating with fillings</p>
+
 
 <h3>Ingredients</h3>
 <ul>
